tests/ui/errors/snapshots/parse_go_style_short_declaration.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:5]
 2 │ fn main() {
 3 │   x := 42
   ·     ─┬
   ·      ╰── Go-style short declaration
 4 │ }
   ╰────
  help: Use `let x = ...` instead of `:=` for variable declarations · code: [parse.syntax_error]
